<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray6"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layout_ab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:background="@color/index_red" >

            <TextView
                android:id="@+id/left_ib"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/com_return"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/text_back"
                android:textColor="@android:color/white"
                android:textSize="@dimen/common_lage_text_size" />

            <TextView
                android:id="@+id/middle_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:gravity="center_horizontal"
                android:maxEms="10"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/text_apply_bespeak_service"
                android:textColor="@android:color/white"
                android:textSize="@dimen/common_lage_text_size"
                android:textStyle="bold" />
        </RelativeLayout>

        <com.huiyin.wight.NestScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/text_product_info"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/common_big_text_size" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/grey_cornor_bg"
                    android:padding="3dp" >

                    <EditText
                        android:id="@+id/order_number_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center_vertical|left"
                        android:hint="关联订单编号"
                        android:lines="1"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/common_big_text_size" />

                    <View
                        android:id="@+id/search_view"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/icon_search" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/gray" />

                <com.huiyin.wight.MyListView
                    android:id="@+id/product_listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:divider="@color/transparent"
                    android:dividerHeight="0px"
                    android:listSelector="@color/transparent"
                    android:scrollbars="none" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/gray_white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/text_bspeak_type"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/common_big_text_size" />

                    <com.huiyin.wight.MyListView
                        android:id="@+id/type_listView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/grey_cornor_bg"
                        android:divider="@color/transparent"
                        android:dividerHeight="0px"
                        android:listSelector="@color/transparent"
                        android:scrollbars="none" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/text_contact_info"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/common_big_text_size" />

                    <EditText
                        android:id="@+id/contact_info_name"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/grey_cornor_bg"
                        android:gravity="center_vertical|left"
                        android:hint="姓名"
                        android:lines="1"
                        android:maxLength="20"
                        android:paddingLeft="5dp"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/common_big_text_size" />

                    <EditText
                        android:id="@+id/contact_info_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/grey_cornor_bg"
                        android:gravity="center_vertical|left"
                        android:hint="手机"
                        android:lines="1"
                        android:inputType="phone"
                        android:maxLength="20"
                        android:paddingLeft="5dp"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/common_big_text_size" />

                    <EditText
                        android:id="@+id/contact_info_address"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/grey_cornor_bg"
                        android:gravity="center_vertical|left"
                        android:hint="地址"
                        android:lines="1"
                        android:maxLength="20"
                        android:paddingLeft="5dp"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/common_big_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/text_remark_info"
                        android:textColor="@color/text_color_black" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/grey_cornor_bg"
                        android:padding="3dp" >

                        <TextView
                            android:id="@+id/remark_info_tip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:text="@string/text_remark_info_tip_300"
                            android:textColor="@color/text_color_black"
                            android:textSize="@dimen/common_big_text_size" />
                        
                        <EditText
                            android:id="@+id/remark_info"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:gravity="top|left"
                            android:layout_above="@id/remark_info_tip"
                            android:hint="@null"
                            android:maxLength="300"
                            android:textColor="@color/text_color_black"
                            android:textSize="@dimen/common_big_text_size" />

                        
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </com.huiyin.wight.NestScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/submit_apply_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/ok_btn_bg"
        android:gravity="center"
        android:text="@string/text_submit_apply"
        android:textColor="@color/white" />

</LinearLayout>