<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/common_title_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        android:background="@color/index_red" >

        <TextView
            android:id="@+id/left_ib"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/com_return"
            android:gravity="center"
            android:padding="5dp"
            android:text="返回"
            android:textColor="@color/white"
            android:textSize="@dimen/common_lage_text_size" />

        <TextView
            android:id="@+id/middle_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxEms="10"
            android:padding="5dp"
            android:singleLine="true"
            android:text="标题"
            android:textColor="@color/white"
            android:textSize="@dimen/common_lage_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/right_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/icon_fenxiang"
            android:textColor="@color/white"
            android:textSize="@dimen/common_lage_text_size"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/sv_mian"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:scaleType="centerInside" />

            <ImageView
                android:id="@+id/iv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/about_title_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title_2" />

            <TextView
                android:id="@+id/vision_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/about_title_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title_5" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/common_btn_graywhite_selector"
                android:orientation="vertical"
                android:padding="5dp" >

                <LinearLayout
                    android:id="@+id/kefu_check_version"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/setting_item_selector"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@drawable/icon_chcek_version" />

                    <TextView
                        android:id="@+id/kefu_version_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dip"
                        android:drawableRight="@drawable/com_black_arraw"
                        android:gravity="left|center"
                        android:text="检查更新" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#ffb6b6b6" />

                <LinearLayout
                    android:id="@+id/kefu_server_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/setting_item_selector"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@drawable/icon_xy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dip"
                        android:drawableRight="@drawable/com_black_arraw"
                        android:gravity="left|center"
                        android:text="服务协议" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#ffb6b6b6" />

                <LinearLayout
                    android:id="@+id/kefu_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/setting_item_selector"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@drawable/icon_kefu" />

                    <TextView
                        android:id="@+id/tel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="12dip"
                        android:drawableRight="@drawable/com_black_arraw"
                        android:gravity="left|center"
                        android:text="电话客服：400-188-2108" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>